added pic and comments

--- a/index.html
+++ b/index.html
@@ -1,19 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-<link rel="stylesheet" href="style/home.css">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Instaclone</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="style/home.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Instaclone</title>
 </head>
+
 <body>
-<header>
-  <a href="#"><i class="fa fa-home" aria-hidden="true"></i></a>
-  <a href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
-  <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-  <a href="#"><i class="fa fa-user-o" aria-hidden="true"></i></a>
-</header>
+    <header>
+        <a href="#"><i class="fa fa-home" aria-hidden="true"></i></a>
+        <a href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
+        <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+        <a href="#"><i class="fa fa-user-o" aria-hidden="true"></i></a>
+    </header>
+
+    <div class="container">
+        <div class="user">
+            <div class="userPic">
+            </div>
+            <div class="userName">
+                UserName
+            </div>
+            <div class="time">
+                3h
+            </div>
+        </div>
+
+        <div class="pic">
+            <img src="http://unsplash.com/photos/Z6v4dSNayVg/download?force=true" alt="Ocean">
+        </div>
+        <div class="footer">
+            <div class="likes">
+                45 likes
+            </div>
+            <div class="description">
+                <strong>userName</strong>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et</p>
+            </div>
+            <div class="hashtag">
+
+            </div>
+            <div class="comments">
+                <div class="allComments">
+                    view all 475,938,593 comments
+                </div>
+                <strong>UserName  </strong>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                <br>
+                <strong>UserName  </strong>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                <br>
+                <strong>UserName  </strong>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+            </div>
+            <div class="addComments">
+              <i class="fa fa-heart" aria-hidden="true"></i>
+                 <input type="text" name="" value="">
+                 <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
+            </div>
+
+        </div>
+    </div>
 </body>
+
 </html>
