--- a/index.html
+++ b/index.html
@@ -38,29 +38,22 @@
             <div class="likes">
                 45 likes
             </div>
-            <div class="description">
-                <strong>userName</strong>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et</p>
-            </div>
-            <div class="hashtag">
 
+            <div class="description">
+                <p><strong>userName</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et <span>#incididunt </span><span>#tempor </span> <span>#amet</span></p>
             </div>
             <div class="comments">
                 <div class="allComments">
                     view all 475,938,593 comments
                 </div>
-                <strong>UserName  </strong>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-                <br>
-                <strong>UserName  </strong>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-                <br>
-                <strong>UserName  </strong>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                <p><strong>dolor_3  </strong><span>@Lorem_</span><p>
+                <p><strong>sit_ipsun3  </strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                <p><strong>_elite </strong><span>@acmonset </span> Amet consectetur adipisicing elit</p>
             </div>
+            <hr>
             <div class="addComments">
               <i class="fa fa-heart" aria-hidden="true"></i>
-                 <input type="text" name="" value="">
+                 <input type="text" placeholder=" Add a comment...">
                  <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
             </div>
 
